--- a/charts.ipynb
+++ b/charts.ipynb
@@ -13,6 +13,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 396,
    "metadata": {},
